--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
     <title>Twitter Experiment</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Pacifico|Josefin+Sans' rel='stylesheet' type='text/css'>
+    <link href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="styles.css">
 
     <!-- 1. Load libraries -->
