add tests for twitter pipes and remove unnecessary code in import and constructor statements

--- a/client/unit-tests.html
+++ b/client/unit-tests.html
@@ -25,8 +25,7 @@
 
       // #3. Import the spec file explicitly
       Promise.all([
-         System.import('app/heroes/hero.spec'),
-         System.import('app/uppercase.pipe.spec')
+         System.import('app/twitter-dates.pipe.spec')
      ])
 
         // #4. wait for all imports to load ...
