experimenting with keroku deploy

--- a/client/index.html
+++ b/client/index.html
@@ -10,12 +10,12 @@
     <!-- 1. Load libraries -->
     <!-- IE required polyfills, in this exact order -->
     <!-- Polyfill(s) for older browsers -->
-    <script src="client/node_modules/es6-shim/es6-shim.js"></script>
-    <script src="client/node_modules/zone.js/dist/zone.js"></script>
-    <script src="client/node_modules/reflect-metadata/Reflect.js"></script>
-    <script src="client/node_modules/systemjs/dist/system.src.js"></script>
+    <script src="node_modules/es6-shim/es6-shim.js"></script>
+    <script src="node_modules/zone.js/dist/zone.js"></script>
+    <script src="node_modules/reflect-metadata/Reflect.js"></script>
+    <script src="node_modules/systemjs/dist/system.src.js"></script>
 
-    <script src="client/systemjs.config.js"></script>
+    <script src="systemjs.config.js"></script>
 
     <!-- 2. Configure SystemJS -->
     <script>
