--- a/client/unit-tests.html
+++ b/client/unit-tests.html
@@ -20,8 +20,8 @@
   <script>
       // #3. Import the spec file explicitly
       Promise.all([
-         System.import('app/twitter-dates.pipe.spec')
-         //System.import('app/twitter.service.spec')
+         System.import('app/twitter-dates.pipe.spec'),
+         System.import('app/twitter.service.spec')
      ])
         // #4. wait for all imports to load ...
         //     then re-execute `window.onload` which
